# dbread

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.example.yaml  pyproject.toml  sample.db
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  benchmarks.md  cli-reference.md  connection-string-formats.md  manual-smoke-test.md  release-process.md  security-threat-model.md  setup-db-readonly.md
docs/images/: mermaid-config.json  query-flow.mmd
docs/journals/: 2026-04-26-v07-extras-tracking-and-add-wizard.md
plans/260422-1846-readonly-db-mcp-proxy/: phase-01-setup-scaffolding.md  phase-02-core-foundation.md  phase-03-sql-guard.md  phase-04-rate-limiter.md  phase-05-mcp-tools.md  phase-06-documentation.md  phase-07-integration-tests.md  plan.md
plans/reports/: brainstorm-260422-1846-readonly-db-mcp-proxy.md
scripts/: benchmark_overhead.py  dev-install.ps1  dev-install.sh
src/dbread/: __init__.py  __main__.py  audit.py  audit_cli.py  cli.py  config.py  connections.py  rate_limiter.py  server.py  sql_guard.py  tools.py
src/dbread/assets/: __init__.py  skill.md
src/dbread/connstr/: __init__.py  _manual_entry.py  converter.py  detector.py  health.py  types.py  wizard.py  writers.py
src/dbread/connstr/parsers/: __init__.py  adonet.py  adonet_tokenizer.py  cloud.py  filepath.py  jdbc.py  odbc.py  uri.py
src/dbread/extras/: __init__.py  installer.py  manager.py
src/dbread/mongo/: __init__.py  client.py  guard.py  schema.py  tools.py
tests/: conftest.py  test_audit.py  test_audit_cli.py  test_cli.py  test_cli_new_commands.py  test_config.py  test_connections.py  test_connstr_converter.py  test_connstr_detector.py  test_connstr_parsers.py  test_connstr_wizard.py  test_connstr_writers.py  test_extras_installer.py  test_extras_manager.py  test_mongo_client.py  test_mongo_guard.py  test_mongo_guard_adversarial.py  test_mongo_schema.py  test_mongo_tools.py  test_rate_limiter.py  test_server_smoke.py  test_sql_guard.py  test_sql_guard_adversarial.py  test_tools.py
tests/integration/: conftest.py  docker-compose.yml  test_e2e_clickhouse.py  test_e2e_duckdb.py  test_e2e_mongo.py  test_e2e_mysql.py  test_e2e_pg.py  test_e2e_sqlite.py
tests/integration/fixtures/: clickhouse-init.sql  mongo-init.js  mysql-init.sql  pg-init.sql
